apps/production/media/prowlarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  serviceName: prowlarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/prowlarr:2.0.2-nightly@sha256:8eaa4fed46add467db8a5cdfb7d2bf84b64051f6f51e4c27938bc93188132042
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: prowlarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 400Mi
              cpu: "1"
            requests:
              memory: 200Mi
              cpu: "0.2"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: prowlarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
