apps/production/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik
